# conscience-servitor

./: .gitignore  LLM2VEC_GEN_TRIAGE.md  README.md  SPEC.md  download_model.py  pyproject.toml  setup_model.py  test_eval.py  vendor_llm2vec_gen.py
python/: calibrate.py  pyproject.toml  triage_service.py
src/conscience_servitor/: __init__.py  backends.json  eval_engine.py  mcp_clients.py  server.py  state.py  triage.py
src/conscience_servitor/data/: centroids.pt
