[project]
name = "conscience-servitor-triage"
version = "0.1.0"
description = "LLM2Vec-Gen triage service for the Conscience Servitor"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "llm2vec-gen",
    "torch>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "numpy>=1.26",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "flash-attn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
